Removed getFirst() because it gave some issues on some older version